--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <title>My Contacts</title>
             <link rel="stylesheet" href="jquery.mobile-1.3.1.min.css">
-            <script type="text/javascript" charset="utf-8" src="jquery-1.7.1.min.js"></script>
+            <script type="text/javascript" charset="utf-8" src="jquery-1.8.2.min.js"></script>
             <script type="text/javascript" charset="utf-8" src="jquery.mobile-1.3.1.min.js"></script>
-            <script type="text/javascript" charset="utf-8" src="cordova-2.7.0.js"></script>
+            <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
             <style>
             .error{
                 font-size: 0.8em;
